# outbox-dispatcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  docker-compose.yml
.claude/commands/: review.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-01b3cbd05df9f0ffef891e7cda82b2cd026e1b0b87ea19f628469edd046dd0ca.json  query-0337beae84ab318f72deddfedb46fa85197400e7bf9247d7ab84c97e9cb25ca3.json  query-0b58c4247bccaf3ff36c7c749d1c70acf0c29e3b878eed7264cc55037f667a00.json  query-11f0bd3dbf09ad0ebdf60fb588272f4150e295d115351dd9ef0f3c2eed1a8540.json  query-13bb955962d599a2b335efb8b133a6423cb474415638e778fcb2eff982b9b176.json  query-1fc7849eb50be10e9f4e96abfe5f650c8f828ae9f611953168faa5dbb560abc8.json  query-2d1b7c928aca7b7b801156021cdfc55c869d0787534976d2b6e736d0422c69c0.json  query-44877e79574248e7b5620dc619ed58cb20bd87b30734799fc326ab2572ca0716.json  query-4a89ac07d68780d6844b7cabcbafca50e416bf1e221358b1c76287005a4ddd9b.json  query-4a9c9cf69b5ea7ab77e389dbfe51efe906247244a94a0646cfd59d6733d58965.json  query-5158ec5a3cccd0d6f71676a83cccca66d0c41a6496f294da0d1a5af988387bc1.json  query-54254fa90c90416e611134ae2d9564a4bdbd88f9d6ad551d37c6c642bda4b2e5.json  query-57fb8f89d4cbfd7bcdf0f3025b3092816cd943a4dc126642c16bfdc3a83e4291.json  query-63ea2ed172976494e6bf184cdb26698cb98b5c71bc1a8343b59c06668685c19f.json  query-65dd6231d67233cca529aed25ff9a48c486c6149bf08acc19246a8035cc7a25d.json  query-68b86d40029ffc402cf9a6e8b62a2b8d585714fca46831d32e762e732dd881a7.json  query-6dda052f1ca9f5fa15e1fb239280aa975a0e7b44d98befe007df1b458cc00346.json  query-84b1e75f074179dd053a4b208a3fd13d21a4cc3338c54d48a8c77d76512c2e0a.json  query-8c514da3ba1710935aa350207c4b424cc23a5f92affa38749a028549dc5a94f5.json  query-9ed92b3b80d7b6a2382ef3ff8c2a057cfb527daa256cb01b8bc76601cd1fbbf9.json  query-a24bc3e7c2b93e627ac6bcf011d2f65c5665a6607402f1d33c4b6b1872226d86.json  query-a3d85ed25564d8b17bd900dc682a765750eb131cb14ba3654693067db8a448aa.json  query-a4e165d5bbaf4effe2c711b3bd38ebe173c2c6b7d18321f76c21ab4d21560ef0.json  query-a94eba82dd3e93b9c06986e7896910bd1b636e5c048141d43f83dab8f7789119.json  query-b3ed104d0592d7f7e7caafaf58ce3bc9ae56478a39771f59831f11619ae26d9e.json  query-bafa6f84ece6efb8eb783033d2999dbafca5f955cec0d2e0eaa6e98fea15f0f7.json  query-c372d5150f282fff3e38721c89685bcef830c18c68d8e66335eaef000e1d804e.json  query-c3b1fb386d562e193c1358682dc21e5bdf88d652e00e7d55e6da0d51bf614768.json  query-c62c147aa6ce5e3444c805b86b3a051f1c3b3903649cdd56e291088be989ca33.json  query-c7b188e54c93af238a04f32a55ca04f2f500b9b69523def863382aad9299b83a.json  query-c7b7e89a2fb2dbb61566b9a3a8b28e0b0b7ef23df3d4312f6b5c6a774ceb3f1f.json  query-ca00d94fbe8e11ec487b0fee44c0a0eef69863b76042106bd7794d46890662f3.json  query-cb69e68a6c2b20909e51cbe0a358fbe963557772f01b09d55133c387ba01f378.json  query-cfd7369be19deb84fb395863f3aa588cb752213fcd2635984adfe39309a39d21.json  query-cfdd40a1973363a9097ae0c3d398094b9456c44df56965c7555fdb445c3fa81d.json  query-d44b5e6a740da16fd4364387fc4a43b26c7205932132167517ff316f779f2cf0.json  query-f62d75678bc8d79a34f8507c928446e180bea3599e2b4d360f50a26ac2fce0eb.json  query-f64191f937ca8be3da3db7336f9293fe048d7a5d7e16fe4d76f5974cd55028f6.json
code-review/: 2026-05-08_phase2_PR2.md  2026-05-08_phase2_pr2.md  2026-05-08_phase2_workspace.md  2026-05-08_phase3_scheduler.md  2026-05-10_phase4_pr4-dispatch.md  2026-05-11_phase6_PR5.md  2026-05-12_phase7_workspace.md  2026-05-15_phase8_workspace.md
crates/admin-api/: Cargo.toml
crates/admin-api/src/: auth.rs  lib.rs  routes.rs
crates/core/: Cargo.toml
crates/core/src/: callbacks.rs  config.rs  dispatch.rs  error.rs  keyring.rs  lib.rs  metrics.rs  repo.rs  retention.rs  retry.rs  scheduler.rs  schema.rs  timeout_sweep.rs
crates/core/tests/: dispatch_integration.rs  scheduler_integration.rs
crates/http-callback/: Cargo.toml
crates/http-callback/src/: client.rs  error.rs  lib.rs  signing.rs
docker/: Dockerfile  docker-compose.example.yml
docs/: deployment.md  operations.md  webhook-protocol.md
envs/: app_config.toml  app_config_dev.toml  app_config_local.toml
examples/: config.minimal.toml  config.production.toml  docker-compose.with-postgres.yml
migrations/: 0001_initial_schema.sql
