[workspace]
members = [
    "crates/admin-api",
    "crates/bin",
    "crates/core",
    "crates/http-callback",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/volodymyrd/outbox-dispatcher"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
futures = "0.3"
hex = "0.4"
hmac = "0.13"
httpdate = "1"
outbox-dispatcher-admin-api = { path = "crates/admin-api" }
outbox-dispatcher-core = { path = "crates/core" }
outbox-dispatcher-http-callback = { path = "crates/http-callback" }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
subtle = "2"
tempfile = "3"
testcontainers = { version = "0.24", features = ["watchdog"] }
testcontainers-modules = { version = "0.12", features = ["postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
zeroize = "1"
