[package]
name = "outbox-dispatcher-admin-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin HTTP API for outbox-dispatcher"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
outbox-dispatcher-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
