[package]
name = "outbox-dispatcher-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the outbox-dispatcher service"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

