[package]
name = "outbox-dispatcher-http-callback"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP webhook delivery adapter for outbox-dispatcher"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
httpdate = { workspace = true }
outbox-dispatcher-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
